bugfixes and documentation

--- a/notebooks/demo_regression.ipynb
+++ b/notebooks/demo_regression.ipynb
@@ -4,15 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <ins>C</ins>alibrated <ins>E</ins>xplanations for Regression (ce)\n",
+    "# <ins>C</ins>alibrated <ins>E</ins>xplanations for Regression\n",
     "## Demonstrated on the Californa Housing data set\n",
     "\n",
     "Author: Tuwe Löfström (tuwe.lofstrom@ju.se)  \n",
     "Copyright 2023 Tuwe Löfström  \n",
     "License: BSD 3 clause\n",
     "Sources:\n",
-    "1. [California Housing data set [kaggle]](https://www.kaggle.com/datasets/camnugent/california-housing-prices)\n",
-    "2. [Calibrated Explanations for Regression [Arxiv]](https://arxiv.org/pdf/....pdf)"
+    "1. [California Housing data set [kaggle]](https://www.kaggle.com/datasets/camnugent/california-housing-prices)"
    ]
   },
   {
@@ -28,7 +27,7 @@
    "source": [
     "#### 1.1 Import packages\n",
     "\n",
-    "In the examples below, we will be using `NumPy`, `pandas`, `sklearn`, and `crepes`. From `crepes`, we import `ConformalPredictiveSystem` and some helper functions from `crepes.extras`. `CalibratedExplainer` is imported from `ce`."
+    "In the examples below, we will be using `NumPy`, `pandas`, `sklearn`, and `crepes`. From `crepes`, we import `ConformalPredictiveSystem` and some helper functions from `crepes.extras`. `CalibratedExplainer` is imported from `calibrated_explanations`."
    ]
   },
   {
@@ -260,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before extracting an explanation, lets see what the output from a Conformal Predictive System (cps) is for the test instances. Three use cases are explored:\n",
+    "Before extracting an explanation, lets see what the output from a Conformal Predictive System (cps) is for the test instance(s). Three use cases are explored:\n",
     "1. using percentiles to get the lower and upper bounds of an interval.\n",
     "2. using the 50th percentile(s) to get the median prediction which can be used as a calibrated prediction from the underlying model.\n",
     "3. getting the probability of the prediction being below a certain threshold. 250 000 is used as threshold, as it is close to the midpoint in the possible range of prices."
@@ -301,6 +300,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create the `CalibratedExplainer` by feeding the model, the calibration set, and mode='regression' as a minimum. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -329,6 +335,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the examples below, all intervals will be with 95% certainty and can be either two-sided or one-sided. The intervals are defined by assigning a pair of values to the `low_high_percentiles` attribute (see below)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -343,14 +356,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Two-sided interval with 95% confidence"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "When using regular or uncertainty plots, the recommended (and default) `Discretizer` is the `BinaryDiscretizer`. Below, the discretizer is set before the explanations are created. Finally regular plots are shown by calling the function `plot_regular`, with `num_to_show` indicating the number of features to include, in order of importance. To save the plots to disk, `save_ext` can take one or several of the following extensions `['pdf','svg','png']`. "
+    "#### Two-sided interval with 95% confidence\n",
+    "When using regular or uncertainty plots, the recommended (and for regression default) `Discretizer` is the `BinaryDiscretizer`. As no discretizer was assigned at initialization, it is already assigned `BinaryDiscretizer`. \n",
+    "\n",
+    "Since we are defining two-sided intervals, `low_high_percentiles=tsi`.\n",
+    "\n",
+    "Once the explanations are extracted, we can visualize them using various plots. The regular plot include an uncertainty estimate for the prediction and the weights of the most influential features. The shaded area is the the prediction interval with 95% confidence. The solid line in the middle of the shaded interval is the median in the conformal predictive distribution.\n",
+    "\n",
+    "Regular plots are shown by calling the function `plot_regular`, with `num_to_show` indicating the number of features to include, in order of importance. To save the plots to disk, `save_ext` can take one or several of the following extensions `['pdf','svg','png']` creating a plot for each instance and file format. "
    ]
   },
   {
@@ -372,8 +385,6 @@
     }
    ],
    "source": [
-    "discretizer = 'binary'\n",
-    "ce.set_discretizer(discretizer)\n",
     "exp = ce(testX, low_high_percentiles=tsi)\n",
     "exp.plot_regular(num_to_show=10, save_ext=[])"
    ]
@@ -382,7 +393,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To get uncertainty plots, the `plot_uncertainty` function can be called."
+    "Uncertainty plots are similar to regular plots but also provide an uncertainty estimate for the impact of each feature. Here, the shaded area is the range of possible changes with the assigned confidence interval (here a two-sided interval with 95% confidence, as defined above). The solid line in the midle of the shaded interval is the median in the conformal predictive distribution.\n",
+    "\n",
+    "To get uncertainty plots, the `plot_uncertainty` function can be called with the same parameters as `plot_regular`."
    ]
   },
   {
@@ -411,7 +424,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### One-sided lower-bounded interval with 95% confidence"
+    "#### One-sided lower-bounded interval with 95% confidence\n",
+    "To change confidence or interval type, new explanations must be extracted. Here `low_high_percentiles=osli` to get a one-sided lower-bounded interval."
    ]
   },
   {
@@ -441,7 +455,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### One-sided upper-bounded interval with 95% confidence"
+    "#### One-sided upper-bounded interval with 95% confidence\n",
+    "Here `low_high_percentiles=osui` to get a one-sided upper-bounded interval."
    ]
   },
   {
