--- a/notebooks/demo_regression.ipynb
+++ b/notebooks/demo_regression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <ins>C</ins>alibrated <ins>E</ins>xplanations for Regression\n",
+    "# Calibrated Explanations for Regression\n",
     "## Demonstrated on the Californa Housing data set\n",
     "\n",
     "Author: Tuwe Löfström (tuwe.lofstrom@ju.se)  \n",
