--- a/notebooks/quickstart.ipynb
+++ b/notebooks/quickstart.ipynb
@@ -64,15 +64,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from calibrated_explanations import CalibratedExplainer\n",
+    "from calibrated_explanations import CalibratedExplainer, __version__\n",
+    "print(__version__)\n",
     "\n",
     "explainer = CalibratedExplainer(rf, X_cal, y_cal)\n",
     "\n",
     "# from version 0.0.8, the following is recommended\n",
-    "factual_explanations = explainer.get_factuals(X_test)\n",
-    "\n",
-    "# or alternatively\n",
-    "factual_explanations = explainer(X_test)"
+    "if __version__ >= \"0.0.8\":\n",
+    "    factual_explanations = explainer.get_factuals(X_test)\n",
+    "else:\n",
+    "    factual_explanations = explainer(X_test)"
    ]
   },
   {
@@ -109,11 +110,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "counterfactual_explanations = explainer.get_counterfactuals(X_test)\n",
-    "\n",
-    "# or alternatively\n",
-    "explainer.set_discretizer('entropy')\n",
-    "counterfactual_explanations = explainer(X_test)"
+    "if __version__ >= \"0.0.8\":\n",
+    "    counterfactual_explanations = explainer.get_counterfactuals(X_test)\n",
+    "else:\n",
+    "    explainer.set_discretizer('entropy')\n",
+    "    counterfactual_explanations = explainer(X_test)"
    ]
   },
   {
@@ -194,11 +195,10 @@
    "source": [
     "explainer = CalibratedExplainer(rf, X_cal, y_cal, mode='regression')\n",
     "\n",
-    "# from version 0.0.8, the following is recommended\n",
-    "factual_explanations = explainer.get_factuals(X_test)\n",
-    "\n",
-    "# or alternatively\n",
-    "factual_explanations = explainer(X_test)"
+    "if __version__ >= '0.0.8':\n",
+    "    factual_explanations = explainer.get_factuals(X_test)\n",
+    "else:\n",
+    "    factual_explanations = explainer(X_test)"
    ]
   },
   {
@@ -229,14 +229,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "counterfactual_explanations = explainer.get_counterfactuals(X_test)\n",
-    "\n",
-    "# or alternatively\n",
-    "explainer.set_discretizer('decile')\n",
-    "counterfactual_explanations = explainer(X_test)\n",
+    "if __version__ >= '0.0.8':\n",
+    "    counterfactual_explanations = explainer.get_counterfactuals(X_test)\n",
+    "else:\n",
+    "    explainer.set_discretizer('decile')\n",
+    "    counterfactual_explanations = explainer(X_test)\n",
     "\n",
     "counterfactual_explanations.plot_counterfactuals()\n",
     "counterfactual_explanations.add_conjunctive_counterfactual_rules().plot_counterfactuals()\n",
