--- a/notebooks/demo_probabilistic_regression.ipynb
+++ b/notebooks/demo_probabilistic_regression.ipynb
@@ -43,18 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\loftuw\\Anaconda3\\envs\\cp\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -65,7 +56,7 @@
     "from calibrated_explanations import CalibratedExplainer\n",
     "\n",
     "from crepes import ConformalPredictiveSystem\n",
-    "from crepes.extras import DifficultyEstimator #sigma_knn, sigma_variance"
+    "from crepes.extras import DifficultyEstimator "
    ]
   },
   {
@@ -249,7 +240,7 @@
     }
    ],
    "source": [
-    "num_to_test = 5\n",
+    "num_to_test = 1\n",
     "\n",
     "trainCalX, testX, trainCalY, testY = train_test_split(X.values, y.values, test_size=num_to_test, random_state=42)\n",
     "trainX, calX, trainY, calY = train_test_split(trainCalX, trainCalY, test_size=0.33, random_state=42)\n",
@@ -415,7 +406,7 @@
     "ce.set_discretizer(discretizer)\n",
     "exp = ce(testX, 180000, low_high_percentiles=tsi)\n",
     "\n",
-    "exp.add_conjunctive_factual_rules(num_to_include=5).plot_regular(num_to_show=15, save_ext=[])"
+    "exp.add_conjunctive_factual_rules().plot_regular()"
    ]
   },
   {
@@ -485,7 +476,7 @@
     }
    ],
    "source": [
-    "exp.remove_conjunctive_rules().plot_regular(num_to_show=10, save_ext=[])"
+    "exp.remove_conjunctive_rules().plot_regular()"
    ]
   },
   {
@@ -559,7 +550,7 @@
     "ce.set_discretizer(discretizer)\n",
     "exp = ce(testX, 180000, low_high_percentiles=tsi)\n",
     "\n",
-    "exp.add_conjunctive_counterfactual_rules(num_to_include=5).plot_counterfactuals(num_to_show=15, save_ext=[])"
+    "exp.add_conjunctive_counterfactual_rules().plot_counterfactuals()"
    ]
   },
   {
@@ -629,7 +620,7 @@
     }
    ],
    "source": [
-    "exp.remove_conjunctive_rules().plot_counterfactuals(num_to_show=10, save_ext=[])"
+    "exp.remove_conjunctive_rules().plot_counterfactuals()"
    ]
   },
   {
@@ -891,7 +882,7 @@
     "ce.set_discretizer(discretizer)\n",
     "exp = ce(testX, 180000, low_high_percentiles=tsi)\n",
     "\n",
-    "exp.add_conjunctive_counterfactual_rules(num_to_include=5).plot_counterfactuals(num_to_show=15, save_ext=[])"
+    "exp.add_conjunctive_counterfactual_rules().plot_counterfactuals()"
    ]
   },
   {
@@ -961,7 +952,7 @@
     }
    ],
    "source": [
-    "exp.remove_conjunctive_rules().plot_counterfactuals(num_to_show=10, save_ext=[])"
+    "exp.remove_conjunctive_rules().plot_counterfactuals()"
    ]
   },
   {
@@ -1051,7 +1042,7 @@
     "ce.set_discretizer(discretizer)\n",
     "exp = ce(testX, 180000, low_high_percentiles=tsi)\n",
     "\n",
-    "exp.add_conjunctive_factual_rules(num_to_include=5).plot_regular(num_to_show=15, save_ext=[])"
+    "exp.add_conjunctive_factual_rules().plot_regular()"
    ]
   },
   {
@@ -1202,7 +1193,7 @@
     "ce.set_discretizer(discretizer)\n",
     "exp = ce(testX, 180000, low_high_percentiles=tsi)\n",
     "\n",
-    "exp.add_conjunctive_counterfactual_rules(num_to_include=5).plot_counterfactuals(num_to_show=15, save_ext=[])"
+    "exp.add_conjunctive_counterfactual_rules().plot_counterfactuals()"
    ]
   },
   {
@@ -1274,7 +1265,7 @@
     }
    ],
    "source": [
-    "exp.remove_conjunctive_rules().plot_counterfactuals(num_to_show=10, save_ext=[])"
+    "exp.remove_conjunctive_rules().plot_counterfactuals()"
    ]
   }
  ],
