--- a/notebooks/quickstart.ipynb
+++ b/notebooks/quickstart.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Getting started with calibrated-explanations\n",
+    "## Classification\n",
     "Let us illustrate how we may use `calibrated_explanations` to generate explanations from a classifier trained on a dataset from\n",
     "[www.openml.org](https://www.openml.org), which we first split into a\n",
     "training and a test set using `train_test_split` from\n",
@@ -138,6 +140,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "`calibrated_explanations` supports multiclass which is demonstrated in [demo_multiclass](https://github.com/Moffran/calibrated_explanations/blob/main/notebooks/demo_multiclass.ipynb). That notebook also demonstrates how both feature names and target and categorical labels can be added to improve the interpretability. \n",
+    "## Regression\n",
     "Extracting explanations for regression is very similar to how it is done for classification. First we load and divide the dataset.   "
    ]
   },
