Revert "calibrated-explanations vX.Y.Z"
This reverts commit ee09816eb16e397567e21aa6ab632e2cb066c473.

--- a/notebooks/demo_regression.ipynb
+++ b/notebooks/demo_regression.ipynb
@@ -345,15 +345,15 @@
    "outputs": [],
    "source": [
     "# alternative 1: by the (Euclidean) distances to the nearest neighbors\n",
-    "ce.set_difficulty_estimator(DifficultyEstimator().fit(X=trainX, scaler=True))\n",
+    "ce.set_difficultyEstimator(DifficultyEstimator().fit(X=trainX, scaler=True))\n",
     "\n",
     "# alternative 2: by the standard deviation of the targets of the nearest neighbors\n",
-    "ce.set_difficulty_estimator(DifficultyEstimator().fit(X=trainX, y=trainY, scaler=True))\n",
+    "ce.set_difficultyEstimator(DifficultyEstimator().fit(X=trainX, y=trainY, scaler=True))\n",
     "\n",
     "# alternative 3: by the absolute errors of the k nearest neighbors\n",
     "oob_predictions = model.oob_prediction_ # requires the model to have been trained with oob_score=True, available for RandomForestRegressor\n",
     "residuals_oob = trainY - oob_predictions\n",
-    "ce.set_difficulty_estimator(DifficultyEstimator().fit(X=trainX, residuals=residuals_oob, scaler=True))"
+    "ce.set_difficultyEstimator(DifficultyEstimator().fit(X=trainX, residuals=residuals_oob, scaler=True))"
    ]
   },
   {
@@ -478,7 +478,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ce.set_difficulty_estimator(DifficultyEstimator().fit(X=trainX, learner=model, scaler=True))"
+    "ce.set_difficultyEstimator(DifficultyEstimator().fit(X=trainX, learner=model, scaler=True))"
    ]
   },
   {
