--- a/notebooks/quickstart.ipynb
+++ b/notebooks/quickstart.ipynb
@@ -74,7 +74,8 @@
     "if __version__ >= \"0.0.8\":\n",
     "    factual_explanations = explainer.get_factuals(X_test)\n",
     "else:\n",
-    "    factual_explanations = explainer(X_test)"
+    "    factual_explanations = explainer(X_test)\n",
+    "display(explainer)"
    ]
   },
   {
@@ -115,7 +116,8 @@
     "    counterfactual_explanations = explainer.get_counterfactuals(X_test)\n",
     "else:\n",
     "    explainer.set_discretizer('entropy')\n",
-    "    counterfactual_explanations = explainer(X_test)"
+    "    counterfactual_explanations = explainer(X_test)\n",
+    "display(explainer)"
    ]
   },
   {
@@ -275,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
