--- a/notebooks/quickstart.ipynb
+++ b/notebooks/quickstart.ipynb
@@ -254,7 +254,7 @@
    "metadata": {},
    "source": [
     "An alternative to factual rules is to extract counterfactual rules. \n",
-    "`get_counterfactual_explanations` can be called to get counterfactual rules with an appropriate discretizer automatically assigned. An alternative is to first change the discretizer to `entropy` (for classification) and then call the `CalibratedExplainer` object as above.  "
+    "`explain_counterfactual` can be called to get counterfactual rules with an appropriate discretizer automatically assigned. An alternative is to first change the discretizer to `entropy` (for classification) and then call the `CalibratedExplainer` object as above.  "
    ]
   },
   {
@@ -525,7 +525,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `get_counterfactual_explanations` will work exactly the same as for classification. Otherwise, the discretizer must be set explicitly and the 'decile' discretizer is recommended. Counterfactual plots work as for classification."
+    "The `explain_counterfactual` will work exactly the same as for classification. Otherwise, the discretizer must be set explicitly and the 'decile' discretizer is recommended. Counterfactual plots work as for classification."
    ]
   },
   {
