--- a/notebooks/quickstart.ipynb
+++ b/notebooks/quickstart.ipynb
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us explain a test instance using the `calibrated_explanations`."
+    "Let us explain a test instance using the `CalibratedExplainer` class in `calibrated_explanations`. The method used to get factual explanations is `explain_factual`."
    ]
   },
   {
