--- a/notebooks/demo_binary_classification.ipynb
+++ b/notebooks/demo_binary_classification.ipynb
@@ -373,7 +373,7 @@
     "\n",
     "Once the explanations are extracted, we can visualize them using regular or uncertainty plots. The regular plot include an uncertainty interval for each class and the weights of the most influential features. The weights (positive or negative) always indicate the impact on the blue class. However, the colors are used to indicate which class is positively affected. Negative (red) weights are reducing the probability of the blue class and increasing the probability of the red class. \n",
     "\n",
-    "Regular plots are shown by calling the function `plot_regular`, with `n_features_to_show` indicating the number of features to include, in order of importance. To save the plots to disk, `save_ext` can take one or several of the following extensions `['pdf','svg','png']` creating a plot for each instance and file format. "
+    "Regular plots are shown by calling the function `plot_all`, with `n_features_to_show` indicating the number of features to include, in order of importance. To save the plots to disk, `save_ext` can take one or several of the following extensions `['pdf','svg','png']` creating a plot for each instance and file format. "
    ]
   },
   {
@@ -408,7 +408,7 @@
    ],
    "source": [
     "factual_explanation = ce.explain_factual(testX)\n",
-    "factual_explanation.plot_regular(n_features_to_show=10, save_ext=[])"
+    "factual_explanation.plot_all()"
    ]
   },
   {
@@ -417,7 +417,7 @@
    "source": [
     "Uncertainty plots are similar to regular plots but also provide an uncertainty estimate for the impact of each feature. Here, the shaded area is the range of possible changes that each feature can result in.\n",
     "\n",
-    "To get uncertainty plots, the `plot_uncertainty` function can be called with the same parameters as `plot_regular`."
+    "To get uncertainty plots, the `plot_uncertainty` function can be called with the same parameters as `plot_all`."
    ]
   },
   {
@@ -451,7 +451,7 @@
     }
    ],
    "source": [
-    "factual_explanation.plot_uncertainty(n_features_to_show=10, save_ext=[])"
+    "factual_explanation.plot_all(uncertainty=True)"
    ]
   },
   {
@@ -518,8 +518,8 @@
    ],
    "source": [
     "factual_explanation.add_conjunctive_factual_rules()\n",
-    "factual_explanation.plot_regular(n_features_to_show=15, save_ext=[])\n",
-    "factual_explanation.plot_uncertainty(n_features_to_show=15, save_ext=[])"
+    "factual_explanation.plot_all(n_features_to_show=15)\n",
+    "factual_explanation.plot_all(uncertainty=True, n_features_to_show=15)"
    ]
   },
   {
@@ -564,7 +564,7 @@
    ],
    "source": [
     "counterfactual_explanation = ce.explain_counterfactual(testX)\n",
-    "counterfactual_explanation.plot_counterfactuals(n_features_to_show=10, save_ext=[])"
+    "counterfactual_explanation.plot_all()"
    ]
   },
   {
@@ -608,7 +608,7 @@
     }
    ],
    "source": [
-    "counterfactual_explanation.add_conjunctive_counterfactual_rules().plot_counterfactuals(n_features_to_show=15, save_ext=[])"
+    "counterfactual_explanation.add_conjunctive_counterfactual_rules().plot_all(n_features_to_show=15)"
    ]
   }
  ],
