--- a/notebooks/demo_multiclass.ipynb
+++ b/notebooks/demo_multiclass.ipynb
@@ -481,7 +481,7 @@
     }
    ],
    "source": [
-    "factual_explanation.plot_regular()"
+    "factual_explanation.plot_all()"
    ]
   },
   {
@@ -642,7 +642,7 @@
     }
    ],
    "source": [
-    "factual_explanation.plot_uncertainty()"
+    "factual_explanation.plot_all(uncertainty=True)"
    ]
   },
   {
@@ -796,7 +796,7 @@
     }
    ],
    "source": [
-    "factual_explanation.add_conjunctive_factual_rules().plot_regular()"
+    "factual_explanation.add_conjunctive_factual_rules().plot_all()"
    ]
   },
   {
@@ -950,7 +950,7 @@
     }
    ],
    "source": [
-    "factual_explanation.remove_conjunctive_rules().plot_regular()"
+    "factual_explanation.remove_conjunctive_rules().plot_all()"
    ]
   },
   {
