--- a/notebooks/demo_speeddating.ipynb
+++ b/notebooks/demo_speeddating.ipynb
@@ -925,13 +925,13 @@
    ],
    "source": [
     "tic = time.time()\n",
-    "counterfactual_explanation.plot_counterfactuals(n_features_to_show=15)\n",
+    "counterfactual_explanation.plot_all(n_features_to_show=15)\n",
     "print(f\"Time taken plotting counterfactual rules: {time.time()-tic}\")\n",
     "tic = time.time()\n",
     "exp = counterfactual_explanation.add_conjunctive_counterfactual_rules()\n",
     "print(f\"Time taken conjunctive rules: {time.time()-tic}\")\n",
     "tic = time.time()\n",
-    "counterfactual_explanation.plot_counterfactuals(n_features_to_show=15)\n",
+    "counterfactual_explanation.plot_all(n_features_to_show=15)\n",
     "print(f\"Time taken plotting counterfactual and conjunctive rules: {time.time()-tic}\")"
    ]
   },
