--- a/notebooks/demo_probabilistic_regression.ipynb
+++ b/notebooks/demo_probabilistic_regression.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Calibrated Explanations for Regression\n",
-    "## Demonstrated on the Californa Housing data set\n",
+    "## Demonstrated on the California Housing data set\n",
     "\n",
     "Author: Tuwe Löfström (tuwe.lofstrom@ju.se)  \n",
     "Copyright 2023 Tuwe Löfström  \n",
@@ -72,7 +72,7 @@
    "metadata": {},
    "source": [
     "#### 1.2 Import data and train a model\n",
-    "Let us import the Califronia Housing data set (see sources at the top)."
+    "Let us import the California Housing data set (see sources at the top)."
    ]
   },
   {
