improved parameter names

--- a/notebooks/demo_probabilistic_regression.ipynb
+++ b/notebooks/demo_probabilistic_regression.ipynb
@@ -624,7 +624,7 @@
    "source": [
     "factual_explanation = ce.explain_factual(testX, 180000)\n",
     "\n",
-    "factual_explanation.add_conjunctions(num_to_include=5).plot_all(n_features_to_show=15)"
+    "factual_explanation.add_conjunctions(n_top_features=5).plot_all(n_features_to_show=15)"
    ]
   },
   {
