--- a/notebooks/demo_regression.ipynb
+++ b/notebooks/demo_regression.ipynb
@@ -425,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is also possible to add conjunctive rules through the `add_conjunctions` method. "
+    "It is also possible to add conjunctive rules through the `add_conjunctions` method. Two rules are combined by default when called without parameters but up to three rules can be combined if the parameter `num_rules_combined=3`. By default, only the 5 most important rules are combined with other rules but this number can also be adjusted through the parameter `num_to_include`."
    ]
   },
   {
@@ -447,7 +447,7 @@
     }
    ],
    "source": [
-    "factual_explanation.add_conjunctions(num_rules_combined=3).plot_all()"
+    "factual_explanation.add_conjunctions(max_rule_size=3).plot_all()"
    ]
   },
   {
@@ -568,7 +568,7 @@
    ],
    "source": [
     "counterfactual_explanation = ce.explain_counterfactual(testX, low_high_percentiles=tsi)\n",
-    "counterfactual_explanation.add_conjunctions(num_to_include=5).plot_all(n_features_to_show=15)"
+    "counterfactual_explanation.add_conjunctions(n_top_features=5).plot_all(n_features_to_show=15)"
    ]
   },
   {
@@ -703,7 +703,7 @@
    ],
    "source": [
     "factual_explanation = ce.explain_factual(testX, low_high_percentiles=tsi)\n",
-    "factual_explanation.add_conjunctions(num_to_include=5)\n",
+    "factual_explanation.add_conjunctions(n_top_features=5)\n",
     "factual_explanation.plot_all(n_features_to_show=15)"
    ]
   },
@@ -847,7 +847,7 @@
    ],
    "source": [
     "counterfactual_explanation = ce.explain_counterfactual(testX, low_high_percentiles=tsi)\n",
-    "counterfactual_explanation.add_conjunctions(num_to_include=5).plot_all(n_features_to_show=15)\n"
+    "counterfactual_explanation.add_conjunctions(n_top_features=5).plot_all(n_features_to_show=15)\n"
    ]
   },
   {
@@ -954,7 +954,7 @@
    ],
    "source": [
     "factual_explanation = ce.explain_factual(testX, low_high_percentiles=tsi)\n",
-    "factual_explanation.add_conjunctions(num_to_include=5)\n",
+    "factual_explanation.add_conjunctions(n_top_features=5)\n",
     "factual_explanation.plot_all(n_features_to_show=15)"
    ]
   },
@@ -1098,7 +1098,7 @@
    ],
    "source": [
     "counterfactual_explanation = ce.explain_counterfactual(testX, low_high_percentiles=tsi)\n",
-    "counterfactual_explanation.add_conjunctions(num_to_include=5).plot_all(n_features_to_show=15)"
+    "counterfactual_explanation.add_conjunctions(n_top_features=5).plot_all(n_features_to_show=15)"
    ]
   },
   {
